<resources>
    <string name="app_name">Kasirkoo</string>
    <string name="transaksi">Transaksi</string>
    <string name="produk">Produk</string>
    <string name="kasbon">Kasbon</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="other">Lainnya</string>
    <string name="home">Beranda</string>
    <string name="kas">Kas Toko</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="pegawai">Pegawai</string>
    <string name="bantuan">Bantuan</string>

    <string name="signin">Masuk</string>
    <string name="signup">Register</string>

<!--    Button -->
    <string name="btnUpdate">Update</string>
    <string name="btnDeletePorduct">Hapus Produk</string>

<!--    String -->
    <string name="updateStockString">Masukan perubahan stok. Input negatif bila ingin mengurangi stok. Misal -100.</string>
    <string name="yourStore">Toko Kamu</string>
    <string name="codeText">Kode : </string>
    <string name="categoryText">Kategori : </string>
    <string name="stockText">Stok : </string>

<!--    Transaksi -->
    <string name="transactionTitle">Transaksi Baru</string>
    <string name="tambah">Tambah</string>
    <string name="checkout">Checkout</string>
    <string name="findProduct">Cari Produk</string>

<!--    Produk -->
    <string name="back">Kembali</string>
    <string name="productName">Nama Produk</string>
    <string name="productPrice">Harga</string>
    <string name="productStock">Stok</string>
    <string name="productCode">Kode Produk</string>
    <string name="productCategory">Kategori</string>
    <string name="addProduct">Tambah Product</string>
    <string name="thereIsNoProduct">Tidak ada produk</string>

<!--    Manajemen Produk-->
    <string name="productManagement">Manajemen Product</string>
    <string name="productListTitle">List Produk</string>
    <string name="categoryListTitle">List Kategori</string>
    <string name="stockManagement">Manajemen Stok</string>

<!--    Kategori -->
    <string name="categoryName">Nama Kategori</string>
    <string name="addCategory">Tambah Kategori</string>
    <string name="category">Kategori</string>
    <string name="thereIsNoCategory">Tidak ada kategori</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>