<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity"
        android:padding="30sp">

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backTextView" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_title_textView"
            android:layout_marginTop="40dp"
            android:id="@+id/layoutImageView"
            android:gravity="center">

            <ImageView
                android:id="@+id/product_imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/flatbox"
                android:scaleType="centerCrop"
                android:largeHeap="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productStock"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/stock_input2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/stock_input2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="43dp"
            android:ems="10"
            android:hint="@string/productStock"
            android:inputType="numberSigned"
            android:background="@drawable/edit_background"
            android:drawableLeft="@drawable/stok_logo"
            android:paddingLeft="10dp"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutImageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateStockString"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/update_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="50dp"
            android:text="@string/btnUpdate"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_full"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stock_input2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>