<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransaksiActivity"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionTitle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/result_textView"
                android:layout_width="360dp"
                android:layout_height="100dp"
                android:text="0"
                android:textColor="@color/black"
                android:background="@drawable/button_number_template"
                app:backgroundTint="@null"
                android:gravity="bottom|right"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_marginTop="110dp">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/num1"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num4"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="4"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num7"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="7"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num0"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="0"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="90dp">

                <Button
                    android:id="@+id/num2"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="2"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num5"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="5"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num8"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="8"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num000"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="000"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="180dp">

                <Button
                    android:id="@+id/num3"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="3"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num6"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="6"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/num9"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="9"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/numC"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="C"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="270dp">

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="Del"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="80dp"
                    android:layout_height="200dp"
                    android:text="Add"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_number_template"
                    app:backgroundTint="@null"
                    android:layout_margin="5dp"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:text="Atau"
            android:layout_marginTop="420dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_marginTop="450dp">

            <Button
                android:id="@+id/cariProduk"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_button_full"
                android:gravity="center"
                android:text="@string/findProduct"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total : Rp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/total_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16sp"/>

        </LinearLayout>



        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/checkout"
            app:iconTint="#FFFFFF"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            app:tooltipText="Checkout"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/ic_checkout"/>

    </RelativeLayout>
</LinearLayout>